# hypergraph

./: .gitignore  CodeMeta.json  Makefile  README  README.md  TODO.md  axioms.hg  default.hg  dune-project  hypergraphs.opam  thoughts.txt
lib/: arena.ml  arena.mli  canvas.ml  canvas.mli  common.ml  common.mli  constants.ml  constants.mli  conversions.ml  conversions.mli  draw.ml  draw.mli  drawable.ml  drawable.mli  dune  file.ml  file.mli  functor.ml  functor.mli  gArena.ml  gArena.mli  geometry.ml  geometry.mli  graph.ml  graph.mli  history.ml  history.mli  iSeq.ml  iSeq.mli  id.ml  id.mli  info.ml  info.mli  inj.ml  inj.mli  lexer.mll  locate.ml  locate.mli  mSet.ml  mSet.mli  (+24 more)
misc/: calc.v
test/: dune  geo.ml  sanity.ml
www/: dune  hg.ml  hip.css  index.html
