(library
 (name hypergraphs)
 (libraries vg)
 (modules_without_implementation types)
; (flags -w -27)
 (modules :standard \ gArena place file))

(library
 (name hypergraphs_cairo)
 (libraries hypergraphs vg.cairo)
 (modules file))

(library
 (name hypergraphs_gtk)
 (libraries hypergraphs cairo2-gtk vg.cairo)
 (modules gArena))

(library
 (name hypergraphs_place)
 (libraries hypergraphs unix)
 (modules place))

(menhir (modules parser))
(ocamllex lexer)
