(library
 (name hypergraphs)
 (libraries vg unix)
 (modules_without_implementation types)
; (flags -w -27)
 (modules :standard \ gArena file))

(menhir (modules parser))
(ocamllex lexer)

(library
 (name hypergraphs_cairo)
 (libraries hypergraphs vg.cairo)
 (modules file))

(library
 (name hypergraphs_gtk)
 (libraries hypergraphs_cairo cairo2-gtk)
 (modules gArena))
